--- a/skibidi-td-v1-test (2).html
+++ b/skibidi-td-v1-test (2).html
@@ -144,6 +144,11 @@
     .calc-thumb .img { width:100%; height:100%; background-size:cover; background-position:center; }
     .calc-thumb .thumb-remove { position:absolute; left:6px; top:6px; background:rgba(0,0,0,0.6); color:#fff; border-radius:8px; padding:3px 6px; cursor:pointer; font-weight:900; font-size:12px; display:inline-block; }
 
+    /* qty badge and trait label on calc thumb */
+    .calc-thumb .qty-badge { position:absolute; right:6px; top:6px; background:rgba(0,0,0,0.6); color:#fff; font-weight:900; padding:4px 6px; border-radius:6px; font-size:11px; }
+    .calc-thumb .trait-label { position:absolute; left:6px; bottom:6px; background:linear-gradient(90deg,#00000080,#00000030); color:#fff; font-weight:900; padding:4px 6px; border-radius:6px; font-size:10px; text-transform:uppercase; }
+    .calc-thumb .demand-pill-mini { position:absolute; left:6px; top:6px; transform:translateY(28px); padding:4px 6px; border-radius:6px; font-weight:900; font-size:10px; background:linear-gradient(90deg,#f59e0b,#ffd54a); color:#070; }
+
     /* square colored frame behind calc thumb */
     .calc-thumb.rarity-astral::before { content:''; position:absolute; inset:-6px; border-radius:12px; background:var(--g-astral); z-index:-1; opacity:0.95; }
     .calc-thumb.rarity-cosmic::before { content:''; position:absolute; inset:-6px; border-radius:12px; background:var(--g-cosmic); z-index:-1; opacity:0.95; }
@@ -171,13 +176,18 @@
     .picker-grid { flex:1; overflow:auto; padding:12px; display:grid; grid-template-columns: repeat(auto-fill,78px); gap:12px; border-radius:10px; }
 
     /* trait selector modal inside picker */
-    .trait-modal { position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); z-index:20; width:360px; max-width:90%; background:var(--card); border:2px solid var(--border); border-radius:12px; padding:12px; box-shadow:0 12px 40px rgba(0,0,0,0.6); }
-    .trait-modal .title { font-weight:900; margin-bottom:8px; text-transform:uppercase; }
-    .trait-modal .traits-list { max-height:200px; overflow:auto; display:flex; flex-direction:column; gap:8px; margin-bottom:8px; }
-    .trait-modal .trait-row { display:flex; gap:8px; align-items:center; justify-content:space-between; padding:8px; border-radius:8px; background:var(--panel); border:1px solid var(--border); }
-    .trait-modal .qty-row { display:flex; gap:8px; align-items:center; justify-content:space-between; margin-top:8px; }
-    .trait-modal .btn-row { display:flex; gap:8px; justify-content:flex-end; margin-top:10px; }
-    .trait-modal .btn { padding:8px 12px; border-radius:8px; cursor:pointer; background:var(--card); border:1px solid var(--border); font-weight:900; }
+    .trait-modal { position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); z-index:40; width:380px; max-width:94%; background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(0,0,0,0.03)); border-radius:14px; padding:18px; box-shadow:0 18px 60px rgba(0,0,0,0.7); border:3px solid rgba(255,255,255,0.03); }
+    .trait-modal .header { display:flex; align-items:center; justify-content:space-between; margin-bottom:12px; }
+    .trait-modal .title { font-weight:900; letter-spacing:1px; font-size:18px; text-transform:uppercase; }
+    .trait-modal .close-x { cursor:pointer; font-weight:900; font-size:20px; padding:4px 8px; border-radius:8px; background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.03); }
+    .trait-modal .traits-list { max-height:220px; overflow:auto; display:flex; flex-direction:column; gap:8px; margin-bottom:12px; }
+    .trait-modal .trait-row { display:flex; gap:12px; align-items:center; justify-content:space-between; padding:10px 12px; border-radius:10px; background:var(--panel); border:1px solid var(--border); text-transform:uppercase; font-weight:900; color:var(--text); }
+    .trait-modal .trait-row label { display:flex; align-items:center; gap:8px; flex:1; }
+    .trait-modal .trait-row input[type="radio"] { width:16px; height:16px; accent-color:#fff; }
+    .trait-modal .qty-row { display:flex; flex-direction:column; gap:6px; margin-top:4px; }
+    .trait-modal .qty-row input { width:100%; padding:12px 14px; border-radius:10px; background:var(--box); border:1px solid var(--border); color:var(--muted); font-weight:900; text-transform:uppercase; }
+    .trait-modal .btn-row { display:flex; gap:8px; justify-content:center; margin-top:12px; }
+    .trait-modal .btn { padding:12px 18px; border-radius:10px; cursor:pointer; background:linear-gradient(90deg,#7b00e6,#ff2d6f); color:#fff; border:none; font-weight:900; width:100%; }
 
     .picker-thumb { width:78px; height:78px; border-radius:10px; background:var(--box); border:2px solid rgba(255,255,255,0.03); display:flex; align-items:center; justify-content:center; cursor:pointer; position:relative; }
     .picker-thumb .img { width:100%; height:100%; background-size:cover; background-position:center; border-radius:8px; }
@@ -262,16 +272,10 @@
         <div class="picker-search"><input id="picker-search-input" placeholder="SEARCH UNITS..." aria-label="Picker search" /></div>
         <div id="picker-grid" class="picker-grid"></div>
         <div id="trait-modal" class="trait-modal" style="display:none" role="dialog" aria-modal="true">
-          <div class="title" id="trait-modal-title">Choose trait</div>
+          <div class="header"><div class="title" id="trait-modal-title">ENTER QUANTITY</div><div id="trait-close" class="close-x">×</div></div>
+          <div class="qty-row"><input id="trait-qty" type="number" min="1" value="1" placeholder="QUANTITY" /></div>
           <div class="traits-list" id="trait-options"></div>
-          <div class="qty-row">
-            <label for="trait-qty">Quantity</label>
-            <input id="trait-qty" type="number" min="1" value="1" style="width:80px;padding:8px;border-radius:8px;background:var(--box);border:1px solid var(--border);color:var(--text)" />
-          </div>
-          <div class="btn-row">
-            <button id="trait-cancel" class="btn">Cancel</button>
-            <button id="trait-apply" class="btn">Apply</button>
-          </div>
+          <div class="btn-row"><button id="trait-apply" class="btn">ADD</button></div>
         </div>
       </div>
     </div>
@@ -527,18 +531,18 @@
     const traitQty = document.getElementById('trait-qty');
     const traitTitle = document.getElementById('trait-modal-title');
     const traitApplyBtn = document.getElementById('trait-apply');
-    const traitCancelBtn = document.getElementById('trait-cancel');
+    const traitCloseBtn = document.getElementById('trait-close');
 
     function showTraitModal(key){
       const u = unitDatabase[key];
       if (!u) return;
       _currentTraitKey = key;
-      traitTitle.textContent = (u.name || 'Unit');
+      traitTitle.textContent = 'ENTER QUANTITY';
       traitOptions.innerHTML = '';
       // base option
       const baseVal = esc(u.baseStats && u.baseStats.value ? u.baseStats.value : '0');
       const baseRow = document.createElement('div'); baseRow.className = 'trait-row';
-      baseRow.innerHTML = `<label style="flex:1"><input type=\"radio\" name=\"trait-choice\" value=\"base\" checked /> Base — ${baseVal}</label>`;
+      baseRow.innerHTML = `<div style="flex:1">Base — ${baseVal}</div><input type=\"radio\" name=\"trait-choice\" value=\"base\" checked />`;
       traitOptions.appendChild(baseRow);
       // trait options if available
       if (u.traits && typeof u.traits === 'object'){
@@ -546,7 +550,7 @@
           const t = u.traits[tk];
           const tv = esc(t && t.value ? t.value : '0');
           const r = document.createElement('div'); r.className = 'trait-row';
-          r.innerHTML = `<label style="flex:1"><input type=\"radio\" name=\"trait-choice\" value=\"${esc(tk)}\" /> ${esc(tk)} — ${tv}</label>`;
+          r.innerHTML = `<div style="flex:1">${esc(tk)} — ${tv}</div><input type=\"radio\" name=\"trait-choice\" value=\"${esc(tk)}\" />`;
           traitOptions.appendChild(r);
         });
       }
@@ -570,16 +574,19 @@
     }
 
     traitApplyBtn.removeEventListener && traitApplyBtn.removeEventListener('click', onTraitApply);
-    traitCancelBtn.removeEventListener && traitCancelBtn.removeEventListener('click', hideTraitModal);
     traitApplyBtn.addEventListener('click', onTraitApply);
-    traitCancelBtn.addEventListener('click', hideTraitModal);
+    traitCloseBtn && traitCloseBtn.addEventListener('click', hideTraitModal);
 
     // calculator rendering functions
     function calcThumbHTML(it){
       const u = unitDatabase[it.key] || {};
       const p = u.unitId ? `url('${imageProvider}${u.unitId}')` : '';
       const rcls = (u.rarity || '').toLowerCase().replace(/\s+/g,'-');
-      return `<div class="calc-thumb rarity-${rcls}" data-id="${it.id}" title="${esc(u.name)}"><div class="img" style="background-image:${p}"></div><div class="thumb-remove" data-id="${it.id}">×</div></div>`;
+      const qtyHtml = `<div class="qty-badge">QTY:${it.qty || 1}</div>`;
+      const traitLabel = (it.trait && it.trait !== 'base') ? `<div class="trait-label">${esc(String(it.trait).toUpperCase())}</div>` : '';
+      const demandText = u.baseStats && u.baseStats.demand ? `DEMAND: ${esc(u.baseStats.demand)}` : '';
+      const demandHtml = demandText ? `<div class="demand-pill-mini">${demandText}</div>` : '';
+      return `<div class="calc-thumb rarity-${rcls}" data-id="${it.id}" title="${esc(u.name)}"><div class="img" style="background-image:${p}"></div><div class="thumb-remove" data-id="${it.id}">×</div>${qtyHtml}${traitLabel}${demandHtml}</div>`;
     }
 
     function renderThumbs(){
